--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,11 +14,11 @@
                         <div class="col-12 col-sm-8 mb-3">
                             <div class="row">
                                 <div class="col-md-5">Valor: <span th:text="${pedido.value}">209,99</span></div>
-                                <div class="col-md-7">Data entrega: <span th:tetx="${pedido.deliveryDate}">03/02/2023</span></div>
+                                <div class="col-md-7">Data entrega: <span th:tetx="${pedido.deliveryDate}"></span></div>
                             </div>
                             <div>Produto: </div>
                             <div><input class="form-control" th:value="${pedido.urlProduct}" value="url produto"/></div>
-                            <div>Descrição</div>
+                            <div>Descrição:</div>
                             <div>
                                 <textarea class="form-control" th:text="${pedido.description}">Descrição do Pedido</textarea>
                             </div>
