--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,18 @@
 
     <body>
         <div class="container">
+            <div class="jumbotron mb-0">
+                <h1 class="display-4">Meus Pedidos</h1>
+            </div>
+            <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="#">Todos</a>
+                    <a class="nav-item nav-link" href="#">Aguardando</a>
+                    <a class="nav-item nav-link" href="#">Aprovado</a>
+                    <a class="nav-item nav-link" href="#">Entregue</a>
+                </div>
+                <a href="/pedido/formulario"><button class="btn btn-secondary my-2 my-sm-0">Novo</button></a>
+            </nav>
             <div class="card" th:each="pedido : ${pedidos}">
                 <div class="card-header" th:text="${pedido.name}">Nome do produto</div>
 
@@ -14,7 +26,7 @@
                         <div class="col-12 col-sm-8 mb-3">
                             <div class="row">
                                 <div class="col-md-5">Valor: <span th:text="${pedido.value}">209,99</span></div>
-                                <div class="col-md-7">Data entrega: <span th:tetx="${pedido.deliveryDate}"></span></div>
+                                <div class="col-md-6">Data entrega: <span th:tetx="${pedido.deliveryDate}"></span></div>
                             </div>
                             <div>Produto: </div>
                             <div><input class="form-control" th:value="${pedido.urlProduct}" value="url produto"/></div>
@@ -26,7 +38,7 @@
 
                         <div class="col-12 col-sm-4">
                             <div>
-                                <img th:src="${pedido.urlImg}" src="" />
+                                <img class="img-thumbnail" th:src="${pedido.urlImg}" src="" />
                             </div>
                         </div>
                     </div>
