--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,46 +1,51 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta charset="UTF-8" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="jumbotron mb-0">
-                <h1 class="display-4">Novo Pedido</h1>
-            </div>
-            <div class="card mt-3">
-                <form th:object="${resquisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="post">
-                    <div class="form-group mb-1">
-                        <label form="nameProduct">Produto</label>
-                        <input th:field="*{nameProduct}" th:errorClass="is-invalid" class="form-control" placeholder="nome do produto"/>
-                        <small class="form-text text-muted">Informe o nome do produto.</small>
-                        <div th:errors="*{nameProduct}" class="invalid-feedback">
-                            Erros do nome do produto
-                        </div>
+
+<head th:replace="~{base :: head}" />
+
+<body>
+    <div th:replace="~{base :: logo}" />
+    <div class="container">
+        <div th:replace="~{base :: titulo('Novo Pedido')}" />
+        <div class="card mt-3">
+            <form th:object="${resquisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="post">
+                <div class="form-group mb-1">
+                    <label form="nameProduct">Produto</label>
+                    <input th:field="*{nameProduct}" th:errorClass="is-invalid" class="form-control"
+                        placeholder="nome do produto" />
+                    <small class="form-text text-muted">Informe o nome do produto.</small>
+                    <div th:errors="*{nameProduct}" class="invalid-feedback">
+                        Erros do nome do produto
                     </div>
-                    <div class="form-group mb-1">
-                        <label form="urlProduct">Url Produto</label>
-                        <input th:field="*{urlProduct}" th:errorClass="is-invalid" class="form-control" placeholder="url do produto"/>
-                        <small class="form-text text-muted">Procure em uma site o produto que você deseja e cole a url da página aqui.</small>
-                        <div th:errors="*{urlProduct}" class="invalid-feedback">
-                            Erros da url do produto
-                        </div>
+                </div>
+                <div class="form-group mb-1">
+                    <label form="urlProduct">Url Produto</label>
+                    <input th:field="*{urlProduct}" th:errorClass="is-invalid" class="form-control"
+                        placeholder="url do produto" />
+                    <small class="form-text text-muted">Procure em uma site o produto que você deseja e cole a url da
+                        página aqui.</small>
+                    <div th:errors="*{urlProduct}" class="invalid-feedback">
+                        Erros da url do produto
                     </div>
-                    <div class="form-group mb-1">
-                        <label form="urlImgProduct">Imagem</label>
-                        <input th:field="*{urlImgProduct}" th:errorClass="is-invalid" class="form-control" placeholder="url da imagem do produto"/>
-                        <small class="form-text text-muted">Copie a url de uma boa imagem do produto e cole aqui  para ajudar conseguir compradores.</small>
-                        <div th:errors="*{urlImgProduct}" class="invalid-feedback">
-                            Erros da url da imagem do produto
-                        </div>
+                </div>
+                <div class="form-group mb-1">
+                    <label form="urlImgProduct">Imagem</label>
+                    <input th:field="*{urlImgProduct}" th:errorClass="is-invalid" class="form-control"
+                        placeholder="url da imagem do produto" />
+                    <small class="form-text text-muted">Copie a url de uma boa imagem do produto e cole aqui para ajudar
+                        conseguir compradores.</small>
+                    <div th:errors="*{urlImgProduct}" class="invalid-feedback">
+                        Erros da url da imagem do produto
                     </div>
-                    <div class="form-group mb-1">
-                        <label form="descriptionProduct">Descrição</label>
-                        <textarea th:field="*{descriptionProduct}" class="form-control" placeholder="Adicione detalhes para ajudar o comprador"></textarea>
-                    </div>
-                    <button class="btn btn-primary" type="submit">Cadastrar</button>
-                </form>
-            </div>
+                </div>
+                <div class="form-group mb-1">
+                    <label form="descriptionProduct">Descrição</label>
+                    <textarea th:field="*{descriptionProduct}" class="form-control"
+                        placeholder="Adicione detalhes para ajudar o comprador"></textarea>
+                </div>
+                <button class="btn btn-primary" type="submit">Cadastrar</button>
+            </form>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
