--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,4 +1,4 @@
-<head>
+<head xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
     <meta charset="UTF-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -18,7 +18,11 @@
 
 <div th:fragment="logo" class="logo-container d-flex justify-content-between mb-3 p-3">
     <span class="logo">Mudi</span>
-    <span mt-3>Login</span>
+    <span mt-3>
+        <a class="text-Light" sec:authorize="!isAuthenticated()" href="/login">Login</a>
+        <a onclick="document.querySelector('#form-login').submit()" class="text-Light" sec:authorize="isAuthenticated()" href="#">Logout</a>
+        <form id="form-login" th:action="@{/logout}" method="post"></form>
+    </span>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
