--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div th:replace="~{base :: titulo('Novo Pedido')}" />
         <div class="card mt-3">
-            <form th:object="${resquisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="post">
+            <form th:object="${resquisicaoNovoPedido}" class="card-body" th:action="@{/pedido/novo}" method="post">
                 <div class="form-group mb-1">
                     <label form="nameProduct">Produto</label>
                     <input th:field="*{nameProduct}" th:errorClass="is-invalid" class="form-control"
