--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,13 +16,24 @@
     </style>
 </head>
 
-<div th:fragment="logo" class="logo-container d-flex justify-content-between mb-3 p-3">
-    <span class="logo">Mudi</span>
-    <span mt-3>
-        <a class="text-Light" sec:authorize="!isAuthenticated()" href="/login">Login</a>
-        <a onclick="document.querySelector('#form-login').submit()" class="text-Light" sec:authorize="isAuthenticated()" href="#">Logout</a>
-        <form id="form-login" th:action="@{/logout}" method="post"></form>
-    </span>
+<div th:fragment="logo" class="">
+    <div class="logo-container logo-container d-flex justify-content-between mb-3 p-3 d-flex justify-content-between">
+        <span class="logo ml-2">Mudi</span>
+        <span mt-3 mr-2>
+            <a class="text-Light" sec:authorize="!isAuthenticated()" href="/login">Login</a>
+            <a onclick="document.querySelector('#form-login').submit()" class="text-Light"
+                sec:authorize="isAuthenticated()" href="#">Logout</a>
+            <form id="form-login" th:action="@{/logout}" method="post"></form>
+        </span>
+    </div>
+    <div class="row mb-2" sec:authorize="isAuthenticated()">
+        <div class="col">
+            <nav class="nav">
+                <a class="nav-link" th:href="@{/home}">Home</a>
+                <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+            </nav>
+        </div>
+    </div>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
