--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,22 +5,10 @@
 <body>
     <div th:replace="~{base :: logo}" />
     <div class="container">
-        <div th:replace="~{base :: titulo('Meus Pedidos')}" />
-        <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
-            <div class="navbar-nav">
-                <a th:classappend="${status} == null ? ' active'" class="nav-item nav-link" href="/home">Todos</a>
-                <a th:classappend="${status} == 'aguardando' ? ' active'" class="nav-item nav-link" href="/home/aguardando">Aguardando</a>
-                <a th:classappend="${status} == 'aprovado' ? ' active'" class="nav-item nav-link" href="/home/aprovado">Aprovado</a>
-                <a th:classappend="${status} == 'entregue' ? ' active'" class="nav-item nav-link" href="/home/entregue">Entregue</a>
-            </div>
-            <a href="/pedido/formulario"><button class="btn btn-secondary my-2 my-sm-0">Novo</button></a>
-        </nav>
+        <div th:replace="~{base :: titulo('Últimos Pedidos')}" />
+
         <div class="card mb-3" th:each="pedido : ${pedidos}">
-            <th:block th:switch="${pedido.status.name()}">
-                <div th:case="'AGUARDANDO'" class="card-header alert alert-warning" role="alert" th:text="${pedido.name}" />
-                <div th:case="'APROVADO'" class="card-header alert alert-success" role="alert" th:text="${pedido.name}" />
-                <div th:case="'ENTREGUE'" class="card-header alert alert-dark" role="alert" th:text="${pedido.name}" />
-            </th:block>
+            <div class="card-header alert alert-dark" role="alert" th:text="${pedido.name}" />
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-sm-8 mb-3">
